# fedora-gather-easyfix

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README  README.md  config.toml.example  fedora-gather-easyfix.spec  gather_easyfix.py  jquery-ui-1.8.17.custom.min.js  pyproject.toml  setup.py  template.html
.s2i/: environment  httpd.conf
fedora_gather_easyfix/: cli.py  gatherers.py  index.py  models.py  output.py  template.html  watch.py
fedora_gather_easyfix/templates/: main.html
static/css/: easyfix.css
static/js/: easyfix.js
